# agent_etf_report

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/agent_treport/approvals/: operator_approved_daily_publish_flow.json
data/agent_treport/focus-etf-sets/: default_focus_etf_set.json
docs/agents/: domain.md  issue-tracker.md  setup-report-2026-05-31.md  triage-labels.md  workflow.md
docs/plans/: agent-treport-extraction-migration.md
src/agent_treport/: AGENTS.md  CONTEXT.md  __init__.py  __main__.py  cli.py
src/agent_treport/docs/: README.md  data-collection-independence-roadmap.md  evidence-ingestion-priority-record.md  operational-live-runbook.md  signal-intelligence-report.md  source-provider-audit.md
src/agent_treport/resources/: README.md
src/agent_treport/signal_report/: __init__.py  approval.py  approval_trace.py  daily_publish_closure.py  durability_substrate_evidence.py  evaluator_review.py  external_delivery_review.py  telegram_delivery.py
src/agent_treport/workflows/: __init__.py  signal_report.py
tests/: test_agent_treport_cli.py  test_agent_treport_daily_approval.py  test_agent_treport_daily_publish_closure.py  test_agent_treport_document_evidence.py  test_agent_treport_external_evidence.py  test_agent_treport_external_evidence_cli.py  test_agent_treport_focus_etf_set.py  test_agent_treport_live_source_replacement.py  test_agent_treport_migration_smoke.py  test_agent_treport_native_operational_handoff.py  test_agent_treport_operational_holdings_adapter.py  test_agent_treport_operational_readiness.py  test_agent_treport_operational_source_cache.py  test_agent_treport_pre_publish_preview.py  test_agent_treport_signal_report.py  test_agent_treport_signal_report_html_rendering.py  test_agent_treport_signal_report_quality.py  test_agent_treport_signal_report_rendering.py  test_agent_treport_signal_report_workflow.py  test_agent_treport_telegram_delivery.py  test_agent_treport_trace_export.py  test_agent_treport_universe_collection.py  test_contract_freeze.py  test_package_data_migration.py
(+120 files in other folders)
