[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[project]
name = "agent-treport"
version = "0.1.0"
description = "Extraction-era Agent TReport domain package."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-pack",
    "agent-pack-docs",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[project.scripts]
agent-treport = "agent_treport.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_treport"]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.sdist]
only-include = ["src/agent_treport", "data/agent_treport", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["pip-*", "pytest-cache-files-*", ".pytest-basetemp-*", "pytest-of-*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
typeCheckingMode = "basic"
venvPath = ".."
venv = ".venv"
